--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,3 +12,6 @@
 <p>
     Make: <%= @product.make %>
 </p>
+
+<%= link_to "Edit this product", edit_product_path(@product) %> |
+<%= link_to "Back to products listing", products_path %>
