--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= product.make %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Show', product_path(product) %></td>
-        
+        <td><%= link_to 'Delete', product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
     <% end %>
 </table>
