--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,36 +1,3 @@
 <h1>Create a new product</h1>
 
-<% if @product.errors.any? %>
-<h2>The following errors prevented the product from being created</h2>
-<ul>
-    <% @product.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-</ul>
-<% end %>
-    
-
-<%= form_for @product do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description%><br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.label :price %><br/>
-        <%= f.text_field :price %>
-    </p>
-    <p>
-        <%= f.label :make %><br/>
-        <%= f.text_field :make %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-    
-<% end %>
-
-<%= link_to "Back to products listing", products_path %>
+<%= render 'form' %>
