Added styling to the Application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,13 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
     
-    <%= render 'layouts/messages' %>
+    <div class="w3-bar w3-border-teal w3-left-align w3-padding-16">
+      <%= render 'layouts/messages' %>
+    </div>
     
     <%= yield %>
-    
+    <%= render 'layouts/footer' %>
   </body>
 </html>
