--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,34 +1,48 @@
+
 <% if @product.errors.any? %>
-<h2>The following errors prevented the product from being created</h2>
-<ul>
-    <% @product.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-</ul>
-<% end %>
-    
-
-<%= form_for @product do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description%><br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.label :price %><br/>
-        <%= f.text_field :price %>
-    </p>
-    <p>
-        <%= f.label :make %><br/>
-        <%= f.text_field :make %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-    
+   <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h2 class="panel-title">
+            <%= pluralize(@product.errors.count, "error") %>
+            prohibited this product from being saved:
+          </h2>
+          <div class="panel-body">
+            <ul>
+              <% @product.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+              <% end %>
+            </ul> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
 
-<%= link_to "Back to products listing", products_path %>
+  <%= form_for @product do |f| %>
+  <div class="w3-container w3-card-4 w3-padding-16 w3-white form">
+      <div class="w3-secton">      
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "w3-input" %>
+      </div>
+     
+      <div class="w3-secton">      
+        <%= f.label :description %>
+        <%= f.text_area :description, class: "w3-input" %>
+      </div>
+      <div class="w3-secton">      
+        <%= f.label :price %>
+        <%= f.text_field :price, class: "w3-input" %>
+      </div>
+      <div class="w3-secton">      
+        <%= f.label :make %>
+        <%= f.text_field :make, class: "w3-input" %>
+      </div>
+      <%= f.submit class: 'w3-button w3-right w3-theme w3-hover-teal' %>
+      
+  </div>
+<% end %>
+
+<h3 class="w3-large w3-border-teal"><%= link_to "Back to products listing", products_path %></h3>
