--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,41 @@
-<h1>Listing All Products</h1>
-<%= link_to "Create new Product", new_product_path %>
+
+
+<h1 align="center">Welcome!!!</h1>
+
+<h2 align="center">Listing All Products</h2>
+
+<% @products.each do |product| %>
+
+  <div class="w3-container w3-padding-32 w3-theme-l5 w3-center" id="contact">
+    <div class="w3-row">
+      <h3 align="center"><span class="w3-xlarge w3-border-teal w3-bottombar">Product: <%= product.title %></span></h3>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Description: <%= product.description %></p>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Price: <%= product.price %></p>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Making Year: <%= product.make %></p>
+      <% product.save %>
+      
+     </div> 
+  </div>
+
+
 <table>
+  <thead>
     <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Make</th>
+      <th colspan="3"></th>
     </tr>
+  </thead>
+  <tbody>
     
-    <% @products.each do |product| %>
-    <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.price %></td>
-        <td><%= product.make %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Show', product_path(product) %></td>
-        <td><%= link_to 'Delete', product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-    <% end %>
+      <tr>
+        <td class="w3-large w3-border-teal "><%= link_to 'Show', product_path(product) %> |</td> 
+        <td class="w3-large w3-border-teal "><%= link_to 'Edit', edit_product_path(product) %> |</td> 
+        <td class="w3-large w3-border-teal "><%= link_to 'Destroy',product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    
+   </tbody>
 </table>
+<br>
+  <% end %>
+<h3 align="center"><span class="w3-xlarge w3-border-teal w3-bottombar"><%= link_to "Create new Product", new_product_path %></span></h3>
+
+
