--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,17 +1,32 @@
-<h1>Showing selected product</h1>
 
-<p>
-    Title: <%= @product.title %>
-</p>
-<p>
-    Description: <%= @product.description %>
-</p>
-<p>
-    Price: <%= @product.price %>
-</p>
-<p>
-    Make: <%= @product.make %>
-</p>
+<h1 align="center">Welcome!!!</h1>
 
-<%= link_to "Edit this product", edit_product_path(@product) %> |
-<%= link_to "Back to products listing", products_path %>
+  <div class="w3-container w3-padding-32 w3-theme-l5 w3-center" id="contact">
+    <div class="w3-row">
+      <h3 align="center"><span class="w3-xlarge w3-border-teal w3-bottombar">Product: <%= @product.title %></span></h3>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Description: <%= @product.description %></p>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Price: <%= @product.price %></p>
+      <p><i class="fa fa-stop-circle-o w3-text-teal w3-xlarge"></i> Discounted Price: <%= @product.make %></p>
+   <% @product.save %>
+      
+     </div> 
+  </div>
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    
+      <tr>
+        <td class="w3-large w3-border-teal "><%= link_to "Back to products listing", products_path %> | </td>
+        <td class="w3-large w3-border-teal "><%= link_to "Edit this product", edit_product_path(@product) %> | </td>
+        <td class="w3-large w3-border-teal "><%= link_to 'Destroy',product_path(@product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+      </tr>
+    
+   </tbody>
+</table>
+<br>
