--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <div class="w3-container w3-padding-32 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
-      <div class="w3-padding-16"><h3><span class="w3-xlarge w3-border-teal w3-bottombar">Create a new product<</span></h3></i></div>
+      <div class="w3-padding-16"><h3><span class="w3-xlarge w3-border-teal w3-bottombar">Create a new product</span></h3></i></div>
     </div>
   </div>
    <%= render 'form' %>
